--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/mkiera972/AngeleJeremy_6_30042021/issues"
   },
-  "homepage": "https://github.com/mkiera972/AngeleJeremy_6_30042021#readme"
+  "homepage": "https://github.com/mkiera972/AngeleJeremy_6_30042021#readme",
+  "devDependencies": {
+    "eslint": "^7.28.0"
+  }
 }
